--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #FF80AB;
+    background-color: #001F3F;
     padding: 20px;
     text-align: center;
 }
@@ -57,7 +57,7 @@ h2 {
 }
 
 h3 {
-    color: #4A4A4A;
+    color: #001F3F;
     text-align: left; /* Center align the text */
     font-weight: normal;
     font-size: 25px;
@@ -123,7 +123,7 @@ ul ul {
 }
 
 footer {
-    background-color: #FF80AB;
+    background-color: #001F3F;
     padding: 20px;
     text-align: center;
 }
@@ -151,7 +151,7 @@ footer {
     display: flex; /* Use flexbox for .work-info */
     flex-direction: column; /* Align children vertically */
     margin-left: 0; /* Adjust margin as needed */
-    background-color: #FF80AB; /* Set background color */
+    background-color: #001F3F; /* Set background color */
     padding-left: 100px; /* Add padding to the text container */
     padding-right: 100px;
     justify-content: center; /* Center content vertically */
@@ -223,8 +223,8 @@ img {
 }
 
 #research2 .text {
-    width: calc(50% - 20px); /* Set the width of the text container */
-    margin-left: 20px; /* Add left margin to separate text from the image */
+    width: calc(50%); /* Set the width of the text container */
+ /* Add left margin to separate text from the image */
 }
 
 #research2 img {
